# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb"
version = "0.4.0"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/Empty2k12/influxdb-rust"

[badges]
travis-ci = { repository = "Empty2k12/influxdb-rust", branch = "master" }

[dependencies]
chrono = { version = "*", features = ["serde"] }
futures = "*"
lazy_static = "*"
influxdb_derive = { version = "*", optional = true }
regex = "*"
surf = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }
thiserror = "*"

[features]
use-serde = ["serde", "serde_json"]
curl-client = ["surf/curl-client"]
h1-client = ["surf/h1-client"]
h1-client-rustls = ["surf/h1-client-rustls"]
hyper-client = ["surf/hyper-client"]
wasm-client = ["surf/wasm-client"]
default = ["use-serde", "hyper-client"]
derive = ["influxdb_derive"]

[dev-dependencies]
async-std = { version = "*", features = ["attributes"] }
tokio = { version =  "*", features = ["full"] }